Prevent overflow of table in preview

--- a/src/components/InputArea.css
+++ b/src/components/InputArea.css
@@ -168,6 +168,8 @@
 
 .note-preview table {
 	max-width: 100%;
+	display: inline-block;
+	overflow-x: scroll;
 	background-color: var(--code-bg-color);
 	color: var(--primary-heading-color);
 	border-radius: 8px;
